more network retrying; clip to bounds if available; use size for area of circle if no perimeter

--- a/settings.ini
+++ b/settings.ini
@@ -13,6 +13,9 @@ longitude_min = -141
 ; maximum longitude for area bounding box
 longitude_max = -52
 
+; area to look at for simulations
+bounds =
+
 ; keys for apis that require authentication
 [keys]
 spotwx =
