--- a/.docker/Dockerfile_tbd
+++ b/.docker/Dockerfile_tbd
@@ -6,17 +6,17 @@ RUN (apt-get update || echo Ignoring update errors)
 
 
 FROM gcc_base AS gcc_with_libs
-RUN apt-get install -y software-properties-common \
-  && echo Adding ppa \
-  && (add-apt-repository ppa:ubuntugis/ubuntugis-unstable \
-    || echo Ignoring add error) \
-  && echo Added ppa \
-  && (apt-get update || echo Ignoring update errors) \
-  && echo Updated \
+# RUN apt-get install -y software-properties-common \
+#   && echo Adding ppa \
+#   && (add-apt-repository ppa:ubuntugis/ubuntugis-unstable \
+#     || echo Ignoring add error) \
+#   && echo Added ppa \
+#   && (apt-get update || echo Ignoring update errors) \
+#   && echo Updated \
+RUN apt-get update \
   && apt-get install -y gcc make git curl zip unzip tar \
     libtiff-dev libgeotiff-dev g++ \
     libgdal-dev util-linux cron rsync openssh-server gdal-bin \
-    libgdal-dev gdb valgrind time \
     libdwarf-dev libelf-dev libnuma-dev \
     libunwind-dev libnewt-dev libdwarf++0 libelf++0 \
     libdw-dev libbfb0-dev \
@@ -64,20 +64,20 @@ RUN apt-get install -y python3-pip libpython3-dev python3-venv \
   && python -m pip install numpy \
   && python -m pip install --global-option=build_ext gdal==`ogrinfo --version | sed "s/GDAL \(.*\),.*/\1/"`
 
-FROM python_gcc as nodocs
-RUN apt-get clean \
-  && rm -rf \
-    /var/lib/apt/lists/* \
-    /usr/share/man/* \
-    /usr/includes/* \
-    /var/cache/apk/* \
-    /root/.npm/* \
-    /usr/lib/node_modules/npm/man/* \
-    /usr/lib/node_modules/npm/doc/* \
-    /usr/lib/node_modules/npm/html/* \
-    /usr/lib/node_modules/npm/scripts/*
+# FROM python_gcc as nodocs
+# RUN apt-get clean \
+#   && rm -rf \
+#     /var/lib/apt/lists/* \
+#     /usr/share/man/* \
+#     /usr/includes/* \
+#     /var/cache/apk/* \
+#     /root/.npm/* \
+#     /usr/lib/node_modules/npm/man/* \
+#     /usr/lib/node_modules/npm/doc/* \
+#     /usr/lib/node_modules/npm/html/* \
+#     /usr/lib/node_modules/npm/scripts/*
 
-FROM nodocs AS tbd_dev
+FROM python_gcc AS tbd_dev
 # FIX: don't want to set this in two different places
 # NOTE: this doesn't have the .2 at the end like above
 ARG cmake_version=3.24
@@ -97,8 +97,11 @@ RUN (useradd -m ${user} || echo User ${user} already exists) \
   && yes ${password} | passwd \
   && yes ${password} | chsh --shell /bin/bash ${user} \
   && chown -R ${user}:${user} /appl/.venv \
+  && apt-get install -y gdb valgrind time \
+    nano \
   && . /appl/.venv/bin/activate \
   && python -m pip install -r /appl/requirements_tbd.txt \
+  && python -m pip install ipython \
   && echo source /appl/.venv/bin/activate >> /home/${user}/.bashrc \
   && echo cd /appl/tbd >> /home/${user}/.bashrc
 # still do this even though no cron jobs so we can have ssh going
@@ -109,7 +112,11 @@ ENTRYPOINT service ssh start \
 
 FROM tbd_dev AS tbd_dev_svc
 RUN sed -i "/\/appl\/tbd\/update.sh/d" /etc/crontab \
-  && echo "*/30 0-10 * * * root (/usr/bin/flock -n /tmp/update.lockfile /appl/tbd/update.sh) > /proc/1/fd/1 2>/proc/1/fd/2" >> /etc/crontab
+  && echo "*/5 * * * * root ((/usr/bin/flock -n /tmp/update.lockfile su user /bin/bash -c '/appl/tbd/update.sh') || rm -rf /tmp/update.lockfile) > /proc/1/fd/1 2>/proc/1/fd/2" >> /etc/crontab
+#  && echo "*/5 * * * * root (/usr/bin/flock -n /tmp/update.lockfile su user /bin/bash -c '/appl/tbd/update.sh' || rm /tmp/update.lockfile) > /proc/1/fd/1 2>/proc/1/fd/2" >> /etc/crontab
+#  && echo "*/5 * * * * root (/usr/bin/flock -n /tmp/update.lockfile su user /bin/bash -c '/appl/tbd/update.sh') > /proc/1/fd/1 2>/proc/1/fd/2" >> /etc/crontab
+#  && echo "*/5 * * * * root (/usr/bin/flock -n /tmp/update.lockfile /appl/tbd/update.sh) > /proc/1/fd/1 2>/proc/1/fd/2" >> /etc/crontab
+#  && echo "*/30 0-10 * * * root (/usr/bin/flock -n /tmp/update.lockfile /appl/tbd/update.sh) > /proc/1/fd/1 2>/proc/1/fd/2" >> /etc/crontab
 #  && echo "* * * * * root (/usr/bin/flock -n /tmp/update.lockfile /appl/tbd/update.sh) > /proc/1/fd/1 2>/proc/1/fd/2" >> /etc/crontab
 # this just clutters up the logs, but could be good for debugging
 # && echo "* * * * * root ((/usr/bin/flock -n /tmp/update.lockfile /appl/tbd/update.sh) || echo "`date`: Already running") > /proc/1/fd/1 2>/proc/1/fd/2" >> /etc/crontab
@@ -321,11 +328,11 @@ RUN (useradd -m ${user} || echo User ${user} already exists) \
 FROM py_gdal AS tbd_prod
 ARG user=user
 ARG password=password
+WORKDIR /appl/
+COPY .docker/requirements_tbd.txt .
 RUN chown -R ${user}:${user} /appl/tbd \
   && python -m pip install --no-warn-script-location --break-system-packages -r /appl/requirements_tbd.txt
 # COPY --from=tbd_clean / /
-WORKDIR /appl/
-COPY .docker/requirements_tbd.txt .
 WORKDIR /appl/tbd/
 COPY --from=tbd_build /appl/tbd/tbd .
 COPY ./settings.ini /appl/
