fixed settings.ini section

--- a/settings.ini
+++ b/settings.ini
@@ -17,8 +17,9 @@ longitude_max = -52
 bounds =
 
 ; keys for apis that require authentication
-[keys]
-spotwx =
+[spotwx]
+key =
+api_limit =
 
 [gis]
 server =
