--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,20 +8,19 @@ on:
   push:
     branches: [ main ]
 
-
-  
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-    - uses: actions/checkout@v2
-        
+    - name: Checkout repository and submodules
+      uses: actions/checkout@v2
+      with:
+        submodules: recursive
     - name: Doxygen TBD
       uses: mattnotmitt/doxygen-action@v1.3.1
       with:
@@ -29,7 +28,6 @@ jobs:
         doxyfile-path: "tbd.conf"
         # Working directory
         working-directory: "tbd"
-        
     - name: Doxygen GIS
       uses: mattnotmitt/doxygen-action@v1.3.1
       with:
@@ -37,7 +35,6 @@ jobs:
         doxyfile-path: "gis.conf"
         # Working directory
         working-directory: "gis"
-        
     - name: Doxygen Main
       uses: mattnotmitt/doxygen-action@v1.3.1
       with:
@@ -45,11 +42,10 @@ jobs:
         doxyfile-path: "main.conf"
         # Working directory
         working-directory: "documentation"
-    
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v3
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        # Default Doxyfile build documentation to html directory. 
+        # Default Doxyfile build documentation to html directory.
         # Change the directory if changes in Doxyfile
         publish_dir: ./documentation/html
