--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -2,11 +2,11 @@
 
 name: Doxygen Manual
 
-on: 
+on:
   workflow_dispatch:
     inputs:
       git-ref:
-        description: Git Ref (Optional)    
+        description: Git Ref (Optional)
         required: false
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
@@ -15,19 +15,20 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - name: Clone Repository (Latest)
       uses: actions/checkout@v2
       if: github.event.inputs.git-ref == ''
+      with:
+        submodules: recursive
     - name: Clone Repository (Custom Ref)
       uses: actions/checkout@v2
       if: github.event.inputs.git-ref != ''
       with:
+        submodules: recursive
         ref: ${{ github.event.inputs.git-ref }}
-    
     - name: Doxygen TBD
       uses: mattnotmitt/doxygen-action@v1.3.1
       with:
@@ -35,7 +36,6 @@ jobs:
         doxyfile-path: "tbd.conf"
         # Working directory
         working-directory: "tbd"
-        
     - name: Doxygen GIS
       uses: mattnotmitt/doxygen-action@v1.3.1
       with:
@@ -43,7 +43,6 @@ jobs:
         doxyfile-path: "gis.conf"
         # Working directory
         working-directory: "gis"
-        
     - name: Doxygen Main
       uses: mattnotmitt/doxygen-action@v1.3.1
       with:
@@ -51,11 +50,10 @@ jobs:
         doxyfile-path: "main.conf"
         # Working directory
         working-directory: "documentation"
-    
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v3
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        # Default Doxyfile build documentation to html directory. 
+        # Default Doxyfile build documentation to html directory.
         # Change the directory if changes in Doxyfile
         publish_dir: ./documentation/html
