--- a/settings.ini
+++ b/settings.ini
@@ -14,7 +14,7 @@ longitude_min = -141
 longitude_max = -52
 
 ; area to look at for simulations
-bounds =
+bounds = bounds.geojson
 
 ; keys for apis that require authentication
 [spotwx]
