--- a/gis/gis.conf
+++ b/gis/gis.conf
@@ -1375,7 +1375,7 @@ DOCSET_FEEDNAME        = "Doxygen generated docs"
 # The default value is: org.doxygen.Project.
 # This tag requires that the tag GENERATE_DOCSET is set to YES.
 
-DOCSET_BUNDLE_ID       = ca.cwfgf.tbd.gis
+DOCSET_BUNDLE_ID       = ca.cwfmf.firestarr.gis
 
 # The DOCSET_PUBLISHER_ID tag specifies a string that should uniquely identify
 # the documentation publisher. This should be a reverse domain-name style
@@ -1383,13 +1383,13 @@ DOCSET_BUNDLE_ID       = ca.cwfgf.tbd.gis
 # The default value is: org.doxygen.Publisher.
 # This tag requires that the tag GENERATE_DOCSET is set to YES.
 
-DOCSET_PUBLISHER_ID    = ca.cwfgf
+DOCSET_PUBLISHER_ID    = ca.cwfmf
 
 # The DOCSET_PUBLISHER_NAME tag identifies the documentation publisher.
 # The default value is: Publisher.
 # This tag requires that the tag GENERATE_DOCSET is set to YES.
 
-DOCSET_PUBLISHER_NAME  = Canadian Wildland Fire Growth Framework
+DOCSET_PUBLISHER_NAME  = Canadian Wildland Fire Modelling Framework
 
 # If the GENERATE_HTMLHELP tag is set to YES then doxygen generates three
 # additional HTML index files: index.hhp, index.hhc, and index.hhk. The
@@ -1479,7 +1479,7 @@ QCH_FILE               =
 # The default value is: org.doxygen.Project.
 # This tag requires that the tag GENERATE_QHP is set to YES.
 
-QHP_NAMESPACE          = ca.cwfgf.tbd.gis
+QHP_NAMESPACE          = ca.cwfmf.firestarr.gis
 
 # The QHP_VIRTUAL_FOLDER tag specifies the namespace to use when generating Qt
 # Help Project output. For more information please see Qt Help Project / Virtual
@@ -1538,7 +1538,7 @@ GENERATE_ECLIPSEHELP   = NO
 # The default value is: org.doxygen.Project.
 # This tag requires that the tag GENERATE_ECLIPSEHELP is set to YES.
 
-ECLIPSE_DOC_ID         = ca.cwfgf.tbd.gis
+ECLIPSE_DOC_ID         = ca.cwfmf.firestarr.gis
 
 # If you want full control over the layout of the generated HTML pages it might
 # be necessary to disable the index and replace it with your own. The
