fix trying to use bash expression directly in cronjob failing

--- a/.docker/Dockerfile_tbd
+++ b/.docker/Dockerfile_tbd
@@ -68,7 +68,7 @@ RUN . /appl/.venv/bin/activate \
 
 FROM tbd_dev AS tbd_dev_svc
 # run as root so we can redirect to where docker logs will show progress
-RUN sudo echo "*/15 * * * * root . /appl/config && [[ \${CRONJOB_RUN} ]] && /usr/bin/flock -n /tmp/update.lockfile sudo -u user /appl/tbd/update.sh > /proc/1/fd/1 2>/proc/1/fd/2" > /etc/crontab
+RUN sudo echo "*/15 * * * * root sudo -u user bash -c '. /appl/config && [[ \${CRONJOB_RUN} ]] && /usr/bin/flock -n /tmp/update.lockfile /appl/tbd/update.sh' > /proc/1/fd/1 2>/proc/1/fd/2" > /etc/crontab
 USER ${USERNAME}
 ENTRYPOINT sudo cron -f
 
