--- a/.docker/Dockerfile_tbd
+++ b/.docker/Dockerfile_tbd
@@ -121,6 +121,7 @@ RUN sudo chown -R ${USERNAME}:${USERNAME} /appl/tbd \
   && apt-get install -y --no-install-recommends python3-pip \
       libgdal-dev libgeotiff5 \
       python3-numpy python3-gdal \
+      cron curl nano procps \
   && update-alternatives --install /usr/bin/python python /usr/bin/python3 10 \
   && apt-get clean \
   && rm -rf \
@@ -132,6 +133,9 @@ USER ${USERNAME}
 # HACK: delete and then shrink instead of trying to build from minimal image for now
 FROM py_gdal AS tbd_prod
 ARG USERNAME
+USER root
+RUN chsh --shell /bin/bash ${USERNAME} \
+  && echo cd /appl/tbd >> /home/${USERNAME}/.bashrc
 WORKDIR /appl/
 COPY .docker/requirements_tbd.txt .
 RUN python -m pip install --no-warn-script-location --break-system-packages -r /appl/requirements_tbd.txt
@@ -141,10 +145,14 @@ COPY --from=tbd_build /appl/tbd/tbd .
 COPY ./tbd/bounds.geojson /appl/tbd/
 COPY ./tbd/fuel.lut /appl/tbd/
 COPY ./tbd/settings.ini /appl/tbd/
+COPY ./tbd/update.sh /appl/tbd/
+RUN sed -i "/source \/appl\/.venv\/bin\/activate/d" /appl/tbd/update.sh
 # HACK: ./tbd/*.py takes forever
 COPY ./tbd/gis.py /appl/tbd/
 COPY ./tbd/main.py /appl/tbd/
 COPY ./tbd/publish_azure.py /appl/tbd/
+COPY ./tbd/publish_geoserver.py /appl/tbd/
+COPY ./tbd/publish_geoserver.sh /appl/tbd/
 COPY ./tbd/tbd.py /appl/tbd/
 WORKDIR /appl/util
 # COPY ./util/*.py .
@@ -158,3 +166,14 @@ COPY ./tbd/cffdrs-ng/NG_FWI.py .
 COPY ./tbd/cffdrs-ng/util.py .
 USER ${USERNAME}
 ENTRYPOINT /bin/bash
+
+
+FROM tbd_prod AS tbd_prod_svc
+# run as root so we can redirect to where docker logs will show progress
+USER root
+RUN sed -i "s/CRONJOB_RUN=.*/CRONJOB_RUN=1/g" /appl/config
+# for some reason this is only set up for user to output to log
+# RUN sudo echo "*/15 * * * * root sudo -u user bash -c '. /appl/config && [[ \${CRONJOB_RUN} ]] && /usr/bin/flock -n /tmp/update.lockfile /appl/tbd/update.sh > /proc/1/fd/1 2>/proc/1/fd/2'" > /etc/crontab
+RUN sudo echo "*/15 * * * * user bash -c '. /appl/config && [[ \${CRONJOB_RUN} ]] && /usr/bin/flock -n /tmp/update.lockfile /appl/tbd/update.sh' > /proc/1/fd/1 2>/proc/1/fd/2" > /etc/crontab
+USER ${USERNAME}
+ENTRYPOINT sudo cron -f
