--- a/.docker/Dockerfile_tbd
+++ b/.docker/Dockerfile_tbd
@@ -7,12 +7,10 @@ RUN apt-get update
 
 
 FROM gcc-cmake-updated AS gcc-cmake-with_libs
-RUN apt-get install -y gcc make git curl zip unzip tar \
-    libtiff-dev libgeotiff-dev g++ \
-    libgdal-dev util-linux cron rsync gdal-bin \
-    libdwarf-dev libelf-dev libnuma-dev \
-    libunwind-dev libnewt-dev libdwarf++0 libelf++0 \
-    libdw-dev libbfb0-dev \
+RUN apt-get install -y \
+    cron curl nano procps psmisc tar util-linux unzip wget zip \
+    libgdal-dev gdal-bin \
+    libtiff-dev libgeotiff-dev \
   && export CPLUS_INCLUDE_PATH=/usr/include/gdal \
   && export C_INCLUDE_PATH=/usr/include/gdal
 
@@ -35,32 +33,29 @@ RUN apt-get install -y flex bison \
 
 FROM gcc-cmake-with_libs AS gcc-cmake-python
 WORKDIR /appl/
-RUN apt-get install -y python3-pip libpython3-dev python3-venv \
+RUN apt-get install -y python3-pip libpython3-dev python3-venv sudo \
   && update-alternatives --install /usr/bin/python python /usr/bin/python3 10 \
   && python -m venv /appl/.venv \
   && . /appl/.venv/bin/activate \
-  && python -m pip install numpy \
+  && python -m pip install ipython numpy \
   && python -m pip install --global-option=build_ext gdal==`ogrinfo --version | sed "s/GDAL \(.*\),.*/\1/"`
 
 
 FROM gcc-cmake-python AS tbd_dev
 ARG USERNAME
+RUN apt-get install -y gdb valgrind time nano ministat
 ARG USER_ID
-WORKDIR /appl/tbd/
 RUN groupadd --gid ${USER_ID} ${USERNAME} \
   && useradd --uid ${USER_ID} --gid ${USER_ID} -m ${USERNAME} \
-  && apt-get update \
-  && apt-get install -y sudo \
+  && chsh --shell /bin/bash ${USERNAME} \
   && echo ${USERNAME} ALL=\(root\) NOPASSWD:ALL > /etc/sudoers.d/${USERNAME} \
   && chmod 0440 /etc/sudoers.d/${USERNAME}
-COPY --from=perf /usr/local/bin/perf /usr/local/bin/
-RUN chsh --shell /bin/bash ${USERNAME} \
-  && chown -R ${USERNAME}:${USERNAME} /appl/.venv \
-  && apt-get install -y gdb valgrind time nano ministat \
-  && . /appl/.venv/bin/activate \
-  && python -m pip install ipython \
+RUN chown -R ${USERNAME}:${USERNAME} /appl/.venv \
+  && echo /appl/tbd/src/py/firestarr > /appl/.venv/lib/python3.11/site-packages/firestarr.pth \
   && echo source /appl/.venv/bin/activate >> /home/${USERNAME}/.bashrc \
   && echo cd /appl/tbd >> /home/${USERNAME}/.bashrc
+WORKDIR /appl/tbd/
+COPY --from=perf /usr/local/bin/perf /usr/local/bin/
 COPY .docker/requirements_tbd.txt /appl/requirements_tbd.txt
 RUN . /appl/.venv/bin/activate \
   && python -m pip install -r /appl/requirements_tbd.txt
@@ -81,64 +76,54 @@ RUN cmake -S . -B /appl/tbd/build -D CMAKE_BUILD_TYPE=Release \
   && cmake --build /appl/tbd/build --config Release --target all -j $(nproc)
 
 
-
 FROM bitnami/minideb:bookworm AS minideb-with_user
 ARG USERNAME
 ARG USER_ID
+RUN apt-get update \
+  && apt-get install -y sudo
 RUN groupadd --gid ${USER_ID} ${USERNAME} \
   && useradd --uid ${USER_ID} --gid ${USER_ID} -m ${USERNAME} \
-  && apt-get update \
-  && apt-get install -y sudo \
+  && chsh --shell /bin/bash ${USERNAME} \
   && echo ${USERNAME} ALL=\(root\) NOPASSWD:ALL > /etc/sudoers.d/${USERNAME} \
   && chmod 0440 /etc/sudoers.d/${USERNAME}
 
 
-# if this works we still need to fix it to compile in a container instead of in the local filesystem
 FROM minideb-with_user AS firestarr
 ARG USERNAME
-WORKDIR /appl/tbd
-COPY --from=tbd_build /appl/tbd/tbd /appl/tbd/
-COPY ./tbd/fuel.lut /appl/tbd/
-RUN chown -R ${USERNAME}:${USERNAME} /appl/tbd \
-  && echo cd /appl/tbd >> /home/${USERNAME}/.bashrc \
-  && apt-get update \
-  && apt-get install -y libgeotiff5 \
+RUN apt-get install -y libgeotiff5 \
   && apt-get clean \
   && rm -rf \
     /var/lib/apt/lists/* \
     /usr/share/man/*
+WORKDIR /appl/tbd
+RUN echo cd /appl/tbd >> /home/${USERNAME}/.bashrc
+COPY --from=tbd_build /appl/tbd/tbd /appl/tbd/
+COPY ./tbd/fuel.lut /appl/tbd/
+RUN chown -R ${USERNAME}:${USERNAME} /appl/tbd
 USER ${USERNAME}
 
 
 FROM minideb-with_user AS py_gdal
-ARG USERNAME
-WORKDIR /appl/tbd
-COPY --from=tbd_build /appl/tbd/tbd /appl/tbd/
-COPY ./tbd/fuel.lut /appl/tbd/
-RUN sudo chown -R ${USERNAME}:${USERNAME} /appl/tbd \
-  && echo cd /appl/tbd >> /home/${USERNAME}/.bashrc \
-  && apt-get update \
-  && apt-get install -y --no-install-recommends python3-pip \
-      libgdal-dev libgeotiff5 \
-      python3-numpy python3-gdal \
-      cron curl nano procps psmisc \
+RUN apt-get install -y --no-install-recommends \
+    cron curl nano procps psmisc tar util-linux unzip wget zip \
+    python3-pip libgdal-dev libgeotiff5 python3-numpy python3-gdal \
   && update-alternatives --install /usr/bin/python python /usr/bin/python3 10 \
   && apt-get clean \
   && rm -rf \
     /var/lib/apt/lists/* \
     /usr/share/man/*
-USER ${USERNAME}
 
 
-# HACK: delete and then shrink instead of trying to build from minimal image for now
 FROM py_gdal AS tbd_prod
 ARG USERNAME
-USER root
-RUN chsh --shell /bin/bash ${USERNAME} \
-  && echo cd /appl/tbd >> /home/${USERNAME}/.bashrc
+RUN echo cd /appl/tbd >> /home/${USERNAME}/.bashrc \
+  && echo /appl/tbd/src/py/firestarr > /usr/lib/python3/dist-packages//firestarr.pth
 WORKDIR /appl/
 COPY .docker/requirements_tbd.txt .
 RUN python -m pip install --no-warn-script-location --break-system-packages -r /appl/requirements_tbd.txt
+WORKDIR /appl/tbd
+COPY --from=tbd_build /appl/tbd/tbd /appl/tbd/
+COPY ./tbd/fuel.lut /appl/tbd/
 COPY ./config /appl/
 WORKDIR /appl/tbd/
 COPY --from=tbd_build /appl/tbd/tbd .
@@ -157,11 +142,9 @@ ENTRYPOINT /bin/bash
 
 
 FROM tbd_prod AS tbd_prod_svc
-# run as root so we can redirect to where docker logs will show progress
 USER root
 RUN sed -i "s/CRONJOB_RUN=.*/CRONJOB_RUN=1/g" /appl/config
 # for some reason this is only set up for user to output to log
-# RUN sudo echo "*/5 * * * * root sudo -u user bash -c '. /appl/config && [[ \${CRONJOB_RUN} ]] && /usr/bin/flock -n /tmp/update.lockfile /appl/tbd/scripts/update.sh > /proc/1/fd/1 2>/proc/1/fd/2'" > /etc/crontab
-RUN sudo echo "*/5 * * * * user bash -c '. /appl/config && [[ \${CRONJOB_RUN} ]] && /usr/bin/flock -n /tmp/update.lockfile /appl/tbd/scripts/update.sh' > /proc/1/fd/1 2>/proc/1/fd/2" > /etc/crontab
+RUN echo "*/5 * * * * user bash -c '. /appl/config && [[ \${CRONJOB_RUN} ]] && /usr/bin/flock -n /tmp/update.lockfile /appl/tbd/scripts/update.sh' > /proc/1/fd/1 2>/proc/1/fd/2" > /etc/crontab
 USER ${USERNAME}
 ENTRYPOINT sudo cron -f
