simplified doxygen config and stopped using tags for subdirectories so all results are in same generated page

--- a/.github/workflows/doxygen.yml
+++ b/.github/workflows/doxygen.yml
@@ -12,38 +12,16 @@ jobs:
       uses: actions/checkout@v3
       with:
         submodules: recursive
-    - name: Doxygen TBD
+    - name: Doxygen
       uses: mattnotmitt/doxygen-action@v1.8.18
       with:
-        doxyfile-path: "tbd.conf"
-        working-directory: "tbd"
+        doxyfile-path: "doxygen.conf"
+        working-directory: "."
         additional-packages: |
           graphviz
           ttf-freefont
-    - name: Doxygen GIS
-      uses: mattnotmitt/doxygen-action@v1.8.18
-      with:
-        doxyfile-path: "gis.conf"
-        working-directory: "gis"
-        additional-packages: |
-          graphviz
-          ttf-freefont
-    - name: Doxygen Main
-      uses: mattnotmitt/doxygen-action@v1.8.18
-      with:
-        doxyfile-path: "main.conf"
-        working-directory: "documentation"
-        additional-packages: |
-          graphviz
-          ttf-freefont
-    - name: Manually link to sub documents
-      run: |
-        cd documentation
-        ./fix_docs.sh
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v3
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        # Default Doxyfile build documentation to html directory.
-        # Change the directory if changes in Doxyfile
-        publish_dir: ./documentation/html
+        publish_dir: ./documentation/build/html
