--- a/documentation/doxygen.conf
+++ b/documentation/doxygen.conf
@@ -166,7 +166,7 @@ FILE_PATTERNS          = *.c \
                          *.qsf \
                          *.ice
 RECURSIVE              = YES
-EXCLUDE                =
+EXCLUDE                = tbd/src/py/firestarr/datasources/private
 EXCLUDE_SYMLINKS       = NO
 EXCLUDE_PATTERNS       =
 EXCLUDE_SYMBOLS        =
@@ -219,7 +219,7 @@ HTML_DYNAMIC_MENUS     = YES
 HTML_DYNAMIC_SECTIONS  = NO
 HTML_INDEX_NUM_ENTRIES = 100
 GENERATE_DOCSET        = NO
-DOCSET_FEEDNAME        = "Doxygen generated docs"
+DOCSET_FEEDNAME        = "FireSTARR"
 DOCSET_BUNDLE_ID       = ca.cwfmf.firestarr
 DOCSET_PUBLISHER_ID    = ca.cwfmf
 DOCSET_PUBLISHER_NAME  = Canadian Wildland Fire Modelling Framework
