--- a/.github/workflows/doxygen.yml
+++ b/.github/workflows/doxygen.yml
@@ -12,14 +12,16 @@ jobs:
       uses: actions/checkout@v3
       with:
         submodules: recursive
+
     - name: Doxygen
       uses: mattnotmitt/doxygen-action@v1.8.18
       with:
-        doxyfile-path: "doxygen.conf"
+        doxyfile-path: "documentation/doxygen.conf"
         working-directory: "."
         additional-packages: |
           graphviz
           ttf-freefont
+
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v3
       with:
