--- a/.docker/Dockerfile_tbd
+++ b/.docker/Dockerfile_tbd
@@ -31,7 +31,7 @@ RUN apt-get install -y locales \
   && sed -i -e 's/# en_US.UTF-8 UTF-8/en_US.UTF-8 UTF-8/' /etc/locale.gen \
   && locale-gen
 RUN apt-get install -y gdb valgrind time nano ministat \
-  libdwarf-dev libelf-dev libdw-dev linux-perf
+  libdwarf-dev libelf-dev libdw-dev linux-perf clang-format
 ARG USER_ID
 RUN groupadd --gid ${USER_ID} ${USERNAME} \
   && useradd --uid ${USER_ID} --gid ${USER_ID} -m ${USERNAME} \
