update to v0.3.0 and make specific tbd_prod_stable image

--- a/.docker/Dockerfile_tbd
+++ b/.docker/Dockerfile_tbd
@@ -127,6 +127,8 @@ RUN chown -R ${USERNAME}:${USERNAME} /appl/tbd
 USER ${USERNAME}
 ENTRYPOINT /bin/bash
 
+FROM tbd_prod AS tbd_prod_stable
+ENTRYPOINT /bin/bash -c "cd /appl/tbd && /appl/tbd/scripts/lock_run.sh"
 
 FROM tbd_prod AS tbd_prod_svc
 USER root
