--- a/config
+++ b/config
@@ -37,3 +37,13 @@ GEOSERVER_CREDENTIALS=
 GEOSERVER_SERVER=
 GEOSERVER_WORKSPACE_NAME=
 GEOSERVER_DIR_DATA=
+
+# azure batch credentials
+BATCH_ACCOUNT_NAME = ""
+BATCH_ACCOUNT_KEY = ""
+STORAGE_ACCOUNT_NAME = ""
+STORAGE_CONTAINER = ""
+STORAGE_KEY = ""
+REGISTRY_USER_NAME = ""
+REGISTRY_PASSWORD = ""
+
